# gtk-text-editor

./: README.md  in.gxanshu.TextEditor.json  justfile  meson.build  requirements.txt
data/: in.gxanshu.TextEditor.desktop.in  in.gxanshu.TextEditor.gschema.xml  in.gxanshu.TextEditor.metainfo.xml.in  in.gxanshu.TextEditor.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: application.vala  main.vala  meson.build  text-editor.gresource.xml  window.ui  window.vala
